# chewy

./: Cargo.toml  README.md
src/: main.rs
test/: emails.txt  output.txt
