[package]
name = "chewy"
version = "0.3.0"
edition = "2021"
author = "thewemonster (wes@thewemonster.com) (https://thewemonster.com)"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
regex = "1"
